--- a/Cloud2021/pom.xml
+++ b/Cloud2021/pom.xml
@@ -21,6 +21,15 @@
       <module>cloud-consumer-feign-hystrix-order80</module>
       <module>cloud-provider-hystrix-dashboard9001</module>
       <module>cloud-gateway-gateway9527</module>
+      <module>cloud-config-center-3344</module>
+      <module>cloud-config-client-3355</module>
+      <module>cloud-config-client-3366</module>
+      <module>cloud-stream-rabbitmq-provider8801</module>
+      <module>cloud-stream-rabbitmq-consumer88002</module>
+      <module>cloud-stream-rabbitmq-consumer88003</module>
+    <module>cloudalibaba-provider--payment9001</module>
+      <module>cloudalibaba-provider--payment9002</module>
+    <module>cloudalibaba-consumer-nacos-order83</module>
   </modules>
   <packaging>pom</packaging>
   <!--  统一管理jar包版本-->
